--- a/api/.sequelizerc
+++ b/api/.sequelizerc
@@ -1,7 +1,7 @@
 var path = require('path');
 
 module.exports = {
-  'config': path.resolve('./db', 'config.json'),
+  'config': path.resolve('./config', 'config.json'),
   'migrations-path': path.resolve('./db', 'migrations'),
   'models-path': path.resolve('./lib', 'models'),
   'seeders-path': path.resolve('./db', 'seeders')
