--- a/api/package.json
+++ b/api/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
+    "multer": "^1.4.4",
     "sequelize": "^6.17.0"
   }
 }
