--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,7 @@
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.17.0"
   }
 }
