--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "password-validator": "^5.3.0",
     "sequelize": "^6.17.0"
   }
 }
