--- a/api/config/config.json.dist
+++ b/api/config/config.json.dist
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "user",
-    "password": "password",
-    "database": "database",
+    "username": "tuto_p7",
+    "password": "pwd",
+    "database": "tuto",
     "host": "127.0.0.1",
     "dialect": "mariadb",
     "seederStorage": "json",
